correcting box spacing

--- a/src/components/pages/Company.module.css
+++ b/src/components/pages/Company.module.css
@@ -31,7 +31,7 @@
 
 .conquestsBox {
   display: flex;
-  gap: 15em;
+  gap: 8em;
   margin-top: 2em;
 } 
 
